--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+    <div class="container">
+      <a class="navbar-brand" href="#">Data Point Metrology</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#form">Request a Demo</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#benefits">Why Choose Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
   <!-- Hero Section -->
   <section class="hero hexagonal-background">
     <div class="container">
@@ -20,7 +43,7 @@
   </section>
 
   <!-- Benefits Section -->
-  <section class="benefits py-5">
+  <section id="benefits" class="benefits py-5">
     <div class="container">
       <h2 class="text-center mb-4">Why Choose Us?</h2>
       <div class="row g-4">
@@ -29,7 +52,7 @@
           <div class="benefit-card p-4 text-center">
             <img src="ComputerDesktop.svg" alt="Precision Icon" width="80">
             <h4 class="mt-3">Precision Programming</h4>
-            <p>Solutions to maximize your CMM performance.</p>
+            <p>Tailored solutions to maximize your CMM performance.</p>
           </div>
         </div>
         <!-- Quick Turnaround -->
@@ -52,6 +75,7 @@
     </div>
   </section>
 
+  <!-- Form Section -->
   <section id="form" class="form-section py-5">
     <div class="container">
       <h2 class="text-center mb-4" style="color: #f7f7f7;">Request a Demo</h2>
@@ -70,7 +94,6 @@
       </div>
     </div>
   </section>
-  
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
